# taobaoUtils

./: .coverage  .gitignore  README.md  config.toml  pyproject.toml
.marscode/: deviceInfo.json
src/taobaoutils/: __init__.py  app.py  auth.py  cli.py  excel_processor.py  main.py  models.py  resources.py  routes.py  utils.py
src/taobaoutils/api/: auth.py  request_config.py  resources.py  routes.py
tests/: conftest.py  test_api.py  test_app.py  test_auth.py  test_cli.py  test_cli_commands.py  test_excel_processor.py  test_excel_upload.py  test_init.py  test_models.py  test_product_listing.py  test_request_config.py  test_resources_helpers.py  test_scheduler_callback.py  test_utils.py
