[project]
name = "taobaoutils"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "=3.13.7"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "toml (>=0.10.2,<0.11.0)",
    "Flask (>=3.0.3,<4.0.0)",
    "Flask-SQLAlchemy (>=3.1.1,<4.0.0)",
    "Flask-RESTful (>=0.3.10,<0.4.0)",
    "gunicorn (>=22.0.0,<23.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-praetorian (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "taobaoutils", from = "src"}]

[tool.poetry.scripts]
tb = "taobaoutils.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"